--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -5,6 +5,7 @@ import FooterSection from "@components/sections/FooterSection.astro";
 import { SITE} from "@data/constants";
 import Stickybutton from "@/components/Stickybutton.astro";
 import Meta from "@components/Meta.astro";
+import GoogleAnalytics from "@/components/GoogleAnalytics.astro";
 
 export interface Props {
 	title: string;
@@ -42,7 +43,7 @@ const {
 <html lang={lang} class="scrollbar-hide lenis lenis-smooth scroll-pt-16">
   <head>
   
-
+    <GoogleAnalytics />
     {
 			sd && (
 				<script
