--- a/src/components/ui/links/MegaMenuProducts.astro
+++ b/src/components/ui/links/MegaMenuProducts.astro
@@ -41,17 +41,18 @@ import personWorking from "@images/person-working.avif";
 
         <div class="flex gap-3">
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-            href="/hikvision"
-            onmouseover="hoverDetails('/pictures/Brand Logo/hikvision.png', 'solution1')">
-            <img src="/pictures/Brand Logo/logo.png" alt="Logo" class="h-auto w-full md:h-auto md:w-32" />
-            <div class="grow">
-              <p 
-                class="mt-3 inline-flex items-center gap-x-1 text-sm font-medium text-blue-600 decoration-2 hover:underline dark:text-teal-600">
-                Learn more
-                <Icon name="arrowRight" />
-              </p>
-            </div>
-          </a>
+          href="/unv"
+          onmouseover="hoverDetails('/pictures/logo.png', 'solution2')">
+          <img src="/pictures/Brand Logo/unv1.png" alt="Logo" class="h-6 w-20 md:auto md:w-[7.5rem]" />
+          <div class="grow">
+            <p 
+              class="mt-3 inline-flex items-center gap-x-1 text-sm font-medium text-blue-600 decoration-2 hover:underline dark:text-teal-600">
+              Learn more
+              <Icon name="arrowRight" />
+            </p>
+          </div>
+        </a>
+         
 
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
             href="/dahua"
@@ -84,6 +85,18 @@ import personWorking from "@images/person-working.avif";
 
         <div class="flex gap-3">
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
+          href="/hikvision"
+          onmouseover="hoverDetails('/pictures/Brand Logo/hikvision.png', 'solution1')">
+          <img src="/pictures/Brand Logo/logo.png" alt="Logo" class="h-auto w-full md:h-auto md:w-32" />
+          <div class="grow">
+            <p 
+              class="mt-3 inline-flex items-center gap-x-1 text-sm font-medium text-blue-600 decoration-2 hover:underline dark:text-teal-600">
+              Learn more
+              <Icon name="arrowRight" />
+            </p>
+          </div>
+        </a>
+          <!-- <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
             href="/ewind"
             onmouseover="hoverDetails('/pictures/logo.png', 'solution2')">
             <img src="/pictures/Brand Logo/ewind1.png" alt="Logo" class="h-6 w-20 md:auto md:w-32" />
@@ -94,7 +107,7 @@ import personWorking from "@images/person-working.avif";
                 <Icon name="arrowRight" />
               </p>
             </div>
-          </a>
+          </a> -->
 
           <a
             class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
@@ -128,9 +141,9 @@ import personWorking from "@images/person-working.avif";
         <div class="flex gap-3">
 
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-            href="/unv"
-            onmouseover="hoverDetails('/pictures/logo.png', 'solution2')">
-            <img src="/pictures/Brand Logo/unv1.png" alt="Logo" class="h-6 w-20 md:auto md:w-[7.5rem]" />
+            href="/hikvision"
+            onmouseover="hoverDetails('/pictures/Brand Logo/hikvision.png', 'solution1')">
+            <img src="/pictures/Brand Logo/uniarch.png" alt="Logo" class="h-auto w-full md:h-auto md:w-32" />
             <div class="grow">
               <p 
                 class="mt-3 inline-flex items-center gap-x-1 text-sm font-medium text-blue-600 decoration-2 hover:underline dark:text-teal-600">
