--- a/src/components/ui/links/MegaMenuProducts.astro
+++ b/src/components/ui/links/MegaMenuProducts.astro
@@ -141,7 +141,7 @@ import personWorking from "@images/person-working.avif";
         <div class="flex gap-3">
 
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-            href="/hikvision"
+            href="/uniarch"
             onmouseover="hoverDetails('/pictures/Brand Logo/hikvision.png', 'solution1')">
             <img src="/pictures/Brand Logo/uniarch.png" alt="Logo" class="h-auto w-full md:h-auto md:w-32" />
             <div class="grow">
