--- a/src/pages/uniarch.astro
+++ b/src/pages/uniarch.astro
@@ -103,23 +103,23 @@ const structuredData={
           {
             title: "",
             description: "High quality image with 3MP, 1/3,2304*1296@20fps in the main stream,Built-in Mic & Speaker, support two-way audio, offer better interaction,Support sound and light warning, makes warning and alarming more noticeable",
-            image: "/public/pictures/Uho-P2A-M3F4D.png",
+            image: "/pictures/Uho-P2A-M3F4D.png",
           },
           {
             title: "Uho-P3C-M5F4",
             description: "High quality image with 5MP, 1/1.8,5MP (2880*1620)@25/20fps; 4MP (2560*1440)@25/20fps; 3MP (2304*1296)@30/25fps; 2MP (1920*1080)@30/25fps;H.264,-Colorhunter%20with%20Wise,Colorhunter with Wise-ISP technology ensures 24-hour full-color images,Support digital WDR (Wide Dynamic Range)",
 
-            image: "/public/pictures/Uho-P3C-M5F4.png",
+            image: "/pictures/Uho-P3C-M5F4.png",
           },
           {
             title: "Uho-S3S-M33D",
             description: "Fixed camera and PT camera integration, dual channels with one IP, look at overall situation and consider details at the same time,Ultra 265, H.265, H.264,Support digital WDR (Wide Dynamic Range),Built-in Mic & Speaker, support two-way audio, offer better interaction",
-            image: "/public/pictures/Uho-S3S-M33D.png",
+            image: "/pictures/Uho-S3S-M33D.png",
           },
           {
             title: "Uho-B2D-M5F3D",
             description: "High quality image with 5MP, 1/3,Ultra 265, H.265, H.264, MJPEG,Smart IR, up to 20m (66ft) IR distance,Support 128 G Micro SD card",
-            image: "/public/pictures/Uho-B2D-M5F3D.jpg",
+            image: "/pictures/Uho-B2D-M5F3D.jpg",
           },
         ].map((item) => (
           <li class="card sticky top-32 cursor-pointer rounded-lg bg-white pt-4 shadow-xl transition-all duration-300 dark:bg-neutral-600">
