--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -82,12 +82,14 @@ import LanguagePicker from "@components/ui/LanguagePicker.astro";
           <a
             href="/"
             class="hover:text-orange-800 font-semibold text-gray-600 dark:text-gray-300 dark:hover:text-blue-600"
+             title="Welcome to Lovosis Technology"
           >
             Home
           </a>
           <a
             href="/event"
             class="hover:text-orange-800 font-semibold text-gray-600 dark:text-gray-300 dark:hover:text-blue-600"
+             title="Learn more about upcoming events"
           >
             Events
           </a>
@@ -98,18 +100,21 @@ import LanguagePicker from "@components/ui/LanguagePicker.astro";
           <a
             href="/about"
             class="font-semibold text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-600"
+            title="Learn more about Lovosis Technology and our services"
           >
             About
           </a>
           <a
             href="/contact"
             class="font-semibold text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-600"
+             title="Contact us for any enquiry"
           >
             Contact
           </a>
           <a
             href="/support/lovosis"
             class="font-semibold text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-600"
+             title="Visit our RMA center"
           >
             Support
           </a>
