--- a/src/components/sections/landing/HeroSection.astro
+++ b/src/components/sections/landing/HeroSection.astro
@@ -68,7 +68,7 @@ interface Props {
   <!-- Hero Image Section -->
   <div class="flex w-full">
     <div class="top-12 overflow-hidden zoom-in hero-image-container hero-image">
-      <img src="/pictures/banner1.jpg" class="rounded-xl" alt="hero-image">
+      <img src="/pictures/banner1.webp" class="rounded-xl" alt="hero-image">
     </div>
   </div>
 
