--- a/src/pages/hikvision.astro
+++ b/src/pages/hikvision.astro
@@ -28,7 +28,17 @@ const descriptions: string =
         "inLanguage": "en-GB",
         "width": "1666",
         "height": "167"
-      }
+      },
+      "email": "sales@lovosis.com",
+      "telephone": "+971509162488",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Satellite Market Naif Deira,Baghlaf Building Showroom No.5",
+        "addressLocality": "Dubai",
+        "addressCountry": "AE",
+        "addressRegion": "Dubai,United Arab Emirates",
+        "postalCode": "123421"
+      },
     },
     {
       "@type": "WebSite",
@@ -51,13 +61,10 @@ const descriptions: string =
     {
       "@type": "WebPage",
       "@id": "https://lovosis.com/#webpage",
-      "url": "https://lovosis.com/",
+      "url": "https://lovosis.com/hikvision",
       "name": "Hikvision wholesale dealer in UAE - Hikvision-Uae",
       "datePublished": "2023-08-26T06:58:56+01:00",
       "dateModified": "2025-01-23T11:04:48+00:00",
-      "about": {
-        "@id": "https://lovosis.com/#organization"
-      },
       "isPartOf": {
         "@id": "https://lovosis.com/#website"
       },
@@ -66,52 +73,8 @@ const descriptions: string =
       },
       "inLanguage": "en-GB"
     },
-    {
-      "@type": "Person",
-      "@id": "https://lovosis.com/author/",
-      "name": "lovosis",
-      "url": "https://lovosis.com/author/",
-      "image": {
-        "@type": "ImageObject",
-        "@id": "https://secure.gravatar.com/avatar/8c367ca02aa04da4888b5841d08b6efb?s=96&amp;d=mm&amp;r=g",
-        "url": "https://secure.gravatar.com/avatar/8c367ca02aa04da4888b5841d08b6efb?s=96&amp;d=mm&amp;r=g",
-        "caption": "lovosis",
-        "inLanguage": "en-GB"
-      },
-      "sameAs": [
-        "https://lovosis.com"
-      ],
-      "worksFor": {
-        "@id": "https://lovosis.com/#organization"
-      }
-    },
-    {
-      "@type": "Article",
-      "headline": "Hikvision wholesale dealer in UAE - Hikvision-UAE",
-      "keywords": "Hikvision wholesale dealer in UAE - Hikvision-UAE",
-      "datePublished": "2023-08-26T06:58:56+01:00",
-      "dateModified": "2025-01-23T11:04:48+00:00",
-      "author": {
-        "@id": "https://lovosis.com/author/",
-        "name": "Gafoor"
-      },
-      "publisher": {
-        "@id": "https://lovosis.com/#organization"
-      },
-      "description": descriptions,
-      "name": "Hikvision wholesale dealer in UAE - Hikvision-UAE",
-      "@id": "https://lovosis.com/#richSnippet",
-      "isPartOf": {
-        "@id": "https://lovosis.com/#webpage"
-      },
-      "image": {
-        "@id": "https://lovosis.com/pictures/hik.png"
-      },
-      "inLanguage": "en-GB",
-      "mainEntityOfPage": {
-        "@id": "https://lovosis.com/#webpage"
-      }
-    }
+   
+
   ]
 }
 ---
