--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -182,10 +182,10 @@ const structuredData={
           first: true,
       },
       {
-          heading: "Custom Fabrication",
+          heading: "Google SEO & Digital Marketing",
           content:
-            "At Lovosis, our custom fabrication solutions are utilize advanced technology to meet your unique requirements, ensuring optimal performance and security for your specific needs.",
-          svg: "tools",
+            "At Lovosis Technology L.L.C, we specialize in driving real, measurable growth for your business through expert Google SEO and Digital Marketing strategies. Our goal is to help you achieve higher search engine rankings, increase organic traffic, and convert visitors into loyal customers.",
+          svg: "google",
           src: solution2,
           alt: "solution-2",
           second: true,
