--- a/src/components/sections/features/FeaturesGeneral.astro
+++ b/src/components/sections/features/FeaturesGeneral.astro
@@ -27,7 +27,6 @@ const { title, subTitle,} = Astro.props;
 <section
   class="mx-auto max-w-[85rem] px-4 py-4 sm:px-6 lg:px-8 lg:py-6 2xl:max-w-full"
 >
-  <!-- Block to display the feature image -->
 
   <div class="mx-auto mb-12 w-full space-y-1 text-center sm:w-1/2 lg:w-1/3">
     <h2
@@ -105,7 +104,9 @@ const { title, subTitle,} = Astro.props;
               </div>
             </div>
           </div>
-          <img src="/pictures/Dahua logo.png" alt="hero-image" class="w-full h-auto bg-cover">
+        <a href="/dahua">
+          <img src="/pictures/Dahua logo.png" alt="hero-image" class="w-full h-auto bg-cover" title="Learn more about Dahua technology">
+        </a>
         </div>
 
         <div class="relative flex h-[10em] w-[17em] md:w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white dark:bg-neutral-600 p-[1.5em] text-lime-300">
@@ -140,8 +141,9 @@ const { title, subTitle,} = Astro.props;
               </div>
             </div>
           </div>
-          <img src="/pictures/Hikvision logo.png" alt="hero-image" class="w-full h-auto bg-cover">
-
+          <a href="/hikvision">
+          <img src="/pictures/Hikvision logo.png" alt="hero-image" class="w-full h-auto bg-cover" title="Learn more about Hikvision">
+        </a>
         </div>
         <div class="relative flex h-[10em] w-[17em] md:w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white dark:bg-neutral-600 p-[1.5em] text-lime-300">
           <div class="group absolute left-1/2 bottom-0 md:top-8 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 dark:bg-blue-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em]">
@@ -170,12 +172,14 @@ const { title, subTitle,} = Astro.props;
             <div class="items-left absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 font-poppins text-neutral-100 dark:text-neutral-100 group-hover:translate-y-0">
               <div class="items-left flex flex-col justify-center">
                 <p class="text-[0.9em] font-light">
-                  As an established dealer in Dubai, we are proud to offer Ewind’s comprehensive range of surveillance solutions. Specializing in innovative, cost-effective security products
+                  As an established dealer in Dubai, we are proud to offer Uniarch comprehensive range of surveillance solutions. Specializing in innovative, cost-effective security products
                 </p>
               </div>
             </div>
           </div>
-          <img src="/pictures/ewind.png" alt="hero-image" class="w-full h-auto bg-cover">
+         
+          <a href="/uniarch">
+          <img src="/pictures/uni.png" alt="hero-image" class=" w-full h-auto bg-cover text-end" title="Learn more about Uniarch"></a>
 
         </div>
         <div class="relative flex h-[10em] w-[17em] md:w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white dark:bg-neutral-600 p-[1.5em] text-lime-300">
@@ -210,8 +214,10 @@ const { title, subTitle,} = Astro.props;
               </div>
             </div>
           </div>
-          <img src="/pictures/unvlogo.png" alt="hero-image" class="w-full h-auto bg-cover">
-
+         
+          <a href="/unv" >
+          <img src="/pictures/brandunv.png" alt="hero-image" class="w-full h-auto bg-cover" title="Learn more about Uniview Technology"></a>
+       
         </div>
 
       </div>
