--- a/src/components/ui/links/MegaMenuProducts.astro
+++ b/src/components/ui/links/MegaMenuProducts.astro
@@ -40,7 +40,7 @@ import personWorking from "@images/person-working.avif";
       <div class="mx-1 flex flex-wrap gap-3 md:mx-0">
 
         <div class="flex gap-3">
-          <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
+          <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10" title="UNV authorized distributor in U.A.E"
           href="/unv"
           onmouseover="hoverDetails('/pictures/logo.png', 'solution2')">
           <img src="/pictures/Brand Logo/unv1.png" alt="Logo" class="h-6 w-20 md:auto md:w-[7.5rem]" />
@@ -96,20 +96,7 @@ import personWorking from "@images/person-working.avif";
             </p>
           </div>
         </a>
-          <!-- <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-            href="/ewind"
-            onmouseover="hoverDetails('/pictures/logo.png', 'solution2')">
-            <img src="/pictures/Brand Logo/ewind1.png" alt="Logo" class="h-6 w-20 md:auto md:w-32" />
-            <div class="grow">
-              <p 
-                class="mt-3 inline-flex items-center gap-x-1 text-sm font-medium text-blue-600 decoration-2 hover:underline dark:text-teal-600">
-                Learn more
-                <Icon name="arrowRight" />
-              </p>
-            </div>
-          </a> -->
-
-          <a
+        <a
             class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
             href="/westerdigital"
             onmouseover="hoverDetails('/pictures/p1.png', 'solution1')">
