--- a/src/pages/hikvision.astro
+++ b/src/pages/hikvision.astro
@@ -22,10 +22,10 @@ const descriptions: string =
       "logo": {
         "@type": "ImageObject",
         "@id": "https://lovosis.com/#logo",
-        "url": "https://lovosis.com/logo.png",
-        "contentUrl": "https://lovosis.com/logo.png",
+        "url": "https://lovosis.com/pictures/logo.png",
+        "contentUrl": "https://lovosis.com/pictures/logo.png",
         "caption": "lovosis.com",
-        "inLanguage": "en-GB",
+        "inLanguage": "en",
         "width": "1666",
         "height": "167"
       },
@@ -48,7 +48,7 @@ const descriptions: string =
       "publisher": {
         "@id": "https://lovosis.com/#organization"
       },
-      "inLanguage": "en-GB",
+      "inLanguage": "en",
        },
     {
       "@type": "ImageObject",
@@ -56,13 +56,13 @@ const descriptions: string =
       "url": "https://lovosis.com/pictures/hik.png",
       "width": "200",
       "height": "200",
-      "inLanguage": "en-GB"
+      "inLanguage": "en"
     },
     {
       "@type": "WebPage",
       "@id": "https://lovosis.com/#webpage",
       "url": "https://lovosis.com/hikvision",
-      "name": "Hikvision wholesale dealer in UAE - Hikvision-Uae",
+      "name": "Hikvision wholesale dealer in U.A.E",
       "datePublished": "2023-08-26T06:58:56+01:00",
       "dateModified": "2025-01-23T11:04:48+00:00",
       "isPartOf": {
@@ -71,7 +71,7 @@ const descriptions: string =
       "primaryImageOfPage": {
         "@id": "https://lovosis.com/pictures/hik.png"
       },
-      "inLanguage": "en-GB"
+      "inLanguage": "en"
     },
    
 
