--- a/src/components/GoogleAnalytics.astro
+++ b/src/components/GoogleAnalytics.astro
@@ -1,8 +1,8 @@
 
-<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-M624Q6H6KL"></script>
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=AW-16558914543"></script>
 <script type="text/partytown">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-M624Q6H6KL');
+  gtag('config', 'AW-16558914543');
 </script>
