--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -93,7 +93,7 @@ const {
     }}
   />
 <Meta meta={meta}/>
-    <script is:inline>
+    <!-- <script is:inline>
       if (
         localStorage.getItem("hs_theme") === "dark" 
         (!("hs_theme" in localStorage) &&
@@ -103,7 +103,7 @@ const {
       } else {
         document.documentElement.classList.remove("dark");
       }
-    </script>
+    </script> -->
     <script>
       import "@scripts/lenisSmoothScroll.js";
     </script>
