--- a/src/pages/unv.astro
+++ b/src/pages/unv.astro
@@ -46,7 +46,7 @@ const structuredData = {
     {
       "@type": "WebPage",
       name: "UNV | Lovosis Technology",
-      url: "https://lovosis.com/uniarch",
+      url: "https://lovosis.com/unv",
       description: description,
     },
     univiewData.map((p) => {
