--- a/src/components/ui/links/MegaMenuLink.astro
+++ b/src/components/ui/links/MegaMenuLink.astro
@@ -74,6 +74,26 @@ import personWorking from "@images/person-working.avif";
             </p>
           </div>
         </a>
+
+        <a
+          class="group flex gap-x-5 rounded-lg p-4 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
+          href="/carrers"
+          onmouseover="updateDetails('/pictures/it.webp', 'IT Solution')"
+        >
+        <img src="/pictures/carrers.webp" alt="Logo" class="h-6 w-20 md:h-10 md:w-38" />
+          <div class="grow">
+            <p class="font-medium text-neutral-800 dark:text-neutral-200">
+              Careers Solution
+            </p>
+            <p 
+              class="mt-3 inline-flex items-center gap-x-1 text-sm font-medium text-blue-600 decoration-2 hover:underline dark:text-teal-600">
+              Learn more
+              <Icon name="arrowRight" />
+            </p>
+          </div>
+        </a>
+
+
       
 
       </div>
