--- a/src/components/ui/links/MegaMenuLink.astro
+++ b/src/components/ui/links/MegaMenuLink.astro
@@ -77,7 +77,7 @@ import personWorking from "@images/person-working.avif";
 
         <a
           class="group flex gap-x-5 rounded-lg p-4 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-          href="/carrers"
+          href="/careers"
           onmouseover="updateDetails('/pictures/it.webp', 'IT Solution')"
         >
         <img src="/pictures/carrers.webp" alt="Logo" class="h-6 w-20 md:h-10 md:w-38" />
